@@ -621,14 +621,40 @@
             return calcDate(date, value, type, -1);
         };
 
+        /**
+         * Returns integer of date between from [dateFrom] to [dateTo] as [type].
+         * @param dateFrom {object} Tempus date object (see {@link date}).
+         * @param dateTo {object} Tempus date object (see {@link date}).
+         * @param type {string} Type. Can be 'seconds', 'minutes', 'hours', 'day', 'month', 'year'.
+         * @returns {number|undefined} Value of [type] between dateFrom to dateTo.
+         * @example
+         * // returns 4
+         * tempus.between({year: 2013, month: 11, day: 1}, {year: 2013, month: 11, day: 5}, 'day');
+         * @example
+         * // returns 6
+         * tempus.between({year: 2013, month: 11, day: 1}, {year: 2014, month: 5, day: 5}, 'month');
+         * @example
+         * // returns 266400
+         * tempus.between({year: 2013, month: 11, day: 1}, {year: 2014, month: 5, day: 5}, 'minutes');
+         * @example
+         * // returns 10224
+         * tempus.between({year: 2013, month: 11, day: 1}, {year: 2015, month: 1, day: 1}, 'hours');
+         * @example
+         * // returns 56
+         * tempus.between(tempus.now(), {year: 2014, month: 1, day: 1}, 'day');
+         * @example
+         * // my current age
+         * // returns 25
+         * tempus.between({year: 1988, month: 3, day: 6}, tempus.now(), 'year');
+         */
         this.between = function (dateFrom, dateTo, type) {
             var from = this.time(dateFrom);
             var to = this.time(dateTo);
             switch (type) {
                 case 'year':
-                    return Math.floor((to - from) / (86400 * 12 * 29.4));
+                    return Math.floor((to - from) / 31556952); // 365.2425 - average days in year. Here in seconds
                 case 'month':
-                    return Math.floor((to - from) / (86400 * 29.4)); // 29.4 - average of days count in months
+                    return Math.floor((to - from) / 2629746);
                 case 'day':
                     return Math.floor((to - from) / 86400);
                 case 'hours':
@@ -931,13 +957,13 @@
 </div>
 
 <nav>
-    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#decDate">decDate</a></li><li><a href="global.html#getDayNames">getDayNames</a></li><li><a href="global.html#getDayOfWeek">getDayOfWeek</a></li><li><a href="global.html#getDaysCountInMonth">getDaysCountInMonth</a></li><li><a href="global.html#getMonthNames">getMonthNames</a></li><li><a href="global.html#incDate">incDate</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#normalizeDate">normalizeDate</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
+    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#between">between</a></li><li><a href="global.html#date">date</a></li><li><a href="global.html#decDate">decDate</a></li><li><a href="global.html#getDayNames">getDayNames</a></li><li><a href="global.html#getDayOfWeek">getDayOfWeek</a></li><li><a href="global.html#getDaysCountInMonth">getDaysCountInMonth</a></li><li><a href="global.html#getMonthNames">getMonthNames</a></li><li><a href="global.html#incDate">incDate</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#normalizeDate">normalizeDate</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
 </nav>
 
 <br clear="both">
 
 <footer>
-    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 17:03:40 GMT+0400 (MSK)
+    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 17:20:04 GMT+0400 (MSK)
 </footer>
 
 <script> prettyPrint(); </script>
