@@ -1,6 +1,7 @@
 0.1.30
 - Format can be undefined for autodetect.
 - Little bug fixed with getDaysCountInMonth from string.
+- Fixed error with tempus.between(). Now all ok.
 
 0.1.29
 - Supports IE6+, Firefox, Chrome, Opera.
